--- a/components/ProductCard.module.css
+++ b/components/ProductCard.module.css
@@ -8,6 +8,7 @@
     transition: all 0.3s ease;
     display: flex;
     flex-direction: column;
+    min-width: 0;
 }
 
 .cardLink {
@@ -110,6 +111,7 @@
     flex-grow: 1;
     display: flex;
     flex-direction: column;
+    min-width: 0;
 }
 
 .name {
